correct version and add new doi

--- a/examples/WISP_Tutorial.ipynb
+++ b/examples/WISP_Tutorial.ipynb
@@ -17,7 +17,7 @@
     "</div>\n",
     "\n",
     "### This software should be cited as:\n",
-    "Koch, P., Goldberg, D.E., Hunsinger, H., Melgar, D., Riquelme, S., Yeck, W.L., and Haynie, K.L., 2025, Wavelet Inversion for SliP (WISP), version 1.0.1: U.S. Geological Survey software release, https://doi.org/10.5066/P1EKKUNW.\n",
+    "Koch, P., Goldberg, D.E., Hunsinger, H., Melgar, D., Riquelme, S., Yeck, W.L., and Haynie, K.L., 2025, Wavelet Inversion for SliP (WISP), version 1.1.0: U.S. Geological Survey software release, https://doi.org/10.5066/P14RVF65.\n",
     "***\n",
     "\n",
     "\n",
