Add tutorial changes and make sure everything has gps to gnss, SH to BHT, insar to imagery, and wasp to ffm/wisp changes

--- a/examples/WISP_Tutorial.ipynb
+++ b/examples/WISP_Tutorial.ipynb
@@ -38,7 +38,7 @@
     "    b. local strong-motion accelerometer waveforms,  \n",
     "    c. local high-rate Global Navigation Satellite Systems (GNSS) displacement waveforms,  \n",
     "    d. static GNSS offsets, and/ or  \n",
-    "    e. downsampled InSAR interferograms.\n",
+    "    e. downsampled satellite imagery (e.g., InSAR interferograms).\n",
     "    \n",
     "Waveforms must be in SAC format, and have station name, channel, longitude, and latitude in the header. Static data must be in text files, formatted like the example data (see https://www.sciencebase.gov/catalog/item/62852a66d34e3bef0c9a6316).\n",
     "***\n",
@@ -57,9 +57,9 @@
     "    3.5. [Modifying the crustal velocity model](#velmod)\n",
     "4. [Adding data types: `ffm model run manual_model_add_data`](#add_data)  \n",
     "    4.1. [strong-motion accelerometer](#strong)  \n",
-    "    4.2. [high-rate Global Navigation Satellite Systems (GNSS)](#cgps)  \n",
-    "    4.3. [static GNSS](#gps)  \n",
-    "    4.4. [InSAR line of sight displacements](#insar)\n",
+    "    4.2. [high-rate Global Navigation Satellite Systems (GNSS)](#cgnss)  \n",
+    "    4.3. [static GNSS](#gnss)  \n",
+    "    4.4. [InSAR line of sight displacements](#imagery)\n",
     "5. [Multi-segment models](#multi_segment)\n",
     "***\n"
    ]
@@ -93,7 +93,7 @@
     "    b. Teleseismic_Data.zip  \n",
     "    c. StrongMotion_Accelerometer_Data.zip  \n",
     "    d. HighRateGNSS_Data.zip  \n",
-    "    e. gps_data  \n",
+    "    e. gnss_data  \n",
     "    f. s1_20150824-20150917_p156_descending.txt  \n",
     "    g. s1_20150826-20150919_p18_ascending.txt\n",
     "    \n",
@@ -114,7 +114,7 @@
     "import zipfile\n",
     "\n",
     "# Data files to download from ScienceBase\n",
-    "data_files = [\"Teleseismic_Data.zip\", \"StrongMotion_Accelerometer_Data.zip\", \"HighRateGNSS_Data.zip\", \"gps_data\", \\\n",
+    "data_files = [\"Teleseismic_Data.zip\", \"StrongMotion_Accelerometer_Data.zip\", \"HighRateGNSS_Data.zip\", \"gnss_data\", \\\n",
     "              \"s1_20150824-20150917_p156_descending.txt\", \"s1_20150826-20150919_p18_ascending.txt\", \"20003k7a_cmt_CMT\"]\n",
     "\n",
     "item_url = \"https://www.sciencebase.gov/catalog/item/62852a66d34e3bef0c9a6316?format=json\"\n",
@@ -140,7 +140,7 @@
     "static_dir = pathlib.Path('Static_Data')\n",
     "if not static_dir.exists():\n",
     "    static_dir.mkdir()\n",
-    "static_files = [\"gps_data\", \"s1_20150824-20150917_p156_descending.txt\", \"s1_20150826-20150919_p18_ascending.txt\"]\n",
+    "static_files = [\"gnss_data\", \"s1_20150824-20150917_p156_descending.txt\", \"s1_20150826-20150919_p18_ascending.txt\"]\n",
     "for static in range(len(static_files)):\n",
     "    infile = pathlib.Path(static_files[static])\n",
     "    outfile = static_dir / static_files[static]\n",
@@ -220,9 +220,9 @@
     "1. `-t body` (teleseismic body waves)  \n",
     "2. `-t surf` (teleseismic surface waves)  \n",
     "3. `-t strong` (strong-motion accelerometer)  \n",
-    "4. `-t cgps` (continuous (high-rate) GPS/GNSS)  \n",
-    "5. `-t gps` (static GPS/GNSS)  \n",
-    "6. `-t in` (InSAR)\n",
+    "4. `-t cgnss` (continuous (high-rate) GNSS)  \n",
+    "5. `-t gnss` (static GNSS)  \n",
+    "6. `-t im` (imagery)\n",
     "\n",
     "<a id='tele'></a> In this initial run, we'll stick with teleseismic observations (`-t body -t surf`).  \n",
     "This step will take a few minutes, and you'll see a lot of output to the screen describing the processing step. When the inversion starts, it will go through 250 iterations (iter) of simulated annealing for each of the two potential nodal planes. It will also make automated plots for those two nodal planes."
@@ -385,8 +385,8 @@
     "2. **model_space.json:** Describes how different fault segments connect (if applicable) and also limits max slip and slip at fault edges, if desired.\n",
     "3. **sampling_filter.json:** Describes the filter parameters used in data processing.\n",
     "4. **segments_data.json:** Fault segment information including strike, dip, rake, subfault sizes, hypocenter location on fault\n",
-    "5. **surf_waves.json:** Surface waves (Rayleigh [BHZ] and Love [SH]) included in the inversion and their weights\n",
-    "6. **tele_waves.json:** Teleseismic body waves (P [BHZ] and SH) included in the inversion and their weights\n",
+    "5. **surf_waves.json:** Surface waves (Rayleigh [BHZ] and Love [BHT]) included in the inversion and their weights\n",
+    "6. **tele_waves.json:** Teleseismic body waves (P [BHZ] and SH [BHT]) included in the inversion and their weights\n",
     "7. **tensor_info.json:** JSON format of the CMT file used as input to the auto inversion. If you want to change hypocenter parameters in future iterations, this is the place to do so.\n",
     "8. **velmodel_data.json:** 1D velocity structure pulled from LITH1.0 and used for the Green's function calculations. You can substitute a different local 1D structure, but you will have to recalculate all the Green's function banks."
    ]
@@ -402,9 +402,9 @@
     "    1.0. `-t body`: updates to the teleseismic body wave data (tele_waves.json)  \n",
     "    1.1. `-t surf`: updates to the teleseismic surface wave data (surf_waves.json)  \n",
     "    1.2. `-t strong`: updates to the strong motion accelerometer data (strong_motion_waves.json')  \n",
-    "    1.3. `-t cgps`: updates to the high-rate GPS/GNSS data (cgps_waves.json')  \n",
-    "    1.4. `-t gps`: updates to the static GPS/GNSS data (static_data.json')  \n",
-    "    1.5. `-t insar`: updates to the insar data (insar_data.json')\n",
+    "    1.3. `-t cgnss`: updates to the high-rate GNSS data (cgnss_waves.json')  \n",
+    "    1.4. `-t gnss`: updates to the static GNSS data (static_data.json')  \n",
+    "    1.5. `-t imagery`: updates to the imagery data (imagery_data.json')\n",
     "2. `-p`: updates to the fault plane orientation (segments_data.json)\n",
     "3. `-a`: updates to the annealing parameters (annealing_prop.json)\n",
     "4. `-m`: updates to the model space parameters (model_space.json)\n",
@@ -444,7 +444,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!ffm manage modify-dicts {WISP_tutorial}/{event_OT}/{ffm_run}/NP1.0 downweight surf -sc \"HOPE:BHZ,SH\""
+    "!ffm manage modify-dicts {WISP_tutorial}/{event_OT}/{ffm_run}/NP1.0 downweight surf -sc \"HOPE:BHZ,BHT\""
    ]
   },
   {
@@ -728,7 +728,7 @@
    "id": "46c1214f",
    "metadata": {},
    "source": [
-    "## <a id='cgps'></a> 4.2. Now let's add the high-rate GNSS data, same process."
+    "## <a id='cgnss'></a> 4.2. Now let's add the high-rate GNSS data, same process."
    ]
   },
   {
@@ -749,7 +749,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Move the continous GPS data (HR_GNSS_Data) to the inversion directory folder:\n",
+    "# Move the continous GNSS data (HR_GNSS_Data) to the inversion directory folder:\n",
     "%cp {WISP_tutorial}/HighRateGNSS_Data/* {WISP_tutorial}/{event_OT}/{ffm_run}/data/"
    ]
   },
@@ -762,11 +762,11 @@
    "source": [
     "# Use the \"manual_model_add_data\" option on \"ffm model run\"\n",
     "# Give it the path to the data directory where you just copied the data (-d ../data/)\n",
-    "# Tell it you want it to add the strong motion data (-t cgps)\n",
+    "# Tell it you want it to add the strong motion data (-t cgnss)\n",
     "# FYI this will take a while, because it also needs to calculate local Green's functions!\n",
     "!ffm model run {WISP_tutorial}/{event_OT}/{ffm_run}/NP1.2 manual_model_add_data \\\n",
     "    -d {WISP_tutorial}/{event_OT}/{ffm_run}/data \\\n",
-    "    -t cgps"
+    "    -t cgnss"
    ]
   },
   {
@@ -777,7 +777,7 @@
    "outputs": [],
    "source": [
     "# OPTIONAL: If you want to have station ID labels on the map, you can re-run the plot command with the -l flag:\n",
-    "!ffm plot neic {WISP_tutorial}/{event_OT}/{ffm_run}/NP1.2 -ffms -t body -t surf -t strong -t cgps -l"
+    "!ffm plot neic {WISP_tutorial}/{event_OT}/{ffm_run}/NP1.2 -ffms -t body -t surf -t strong -t cgnss -l"
    ]
   },
   {
@@ -786,7 +786,7 @@
    "metadata": {},
    "source": [
     "## Now we have all the kinematic data included, let's move onto the static data\n",
-    "### <a id='gps'></a> 4.3. Starting with the static GNSS/GPS data"
+    "### <a id='gnss'></a> 4.3. Starting with the static GNSS data"
    ]
   },
   {
@@ -807,8 +807,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Move the gps_data text file into your working directory:\n",
-    "!cp {WISP_tutorial}/Static_Data/gps_data {WISP_tutorial}/{event_OT}/{ffm_run}/NP1.3/"
+    "# Move the gnss_data text file into your working directory:\n",
+    "!cp {WISP_tutorial}/Static_Data/gnss_data {WISP_tutorial}/{event_OT}/{ffm_run}/NP1.3/"
    ]
   },
   {
@@ -818,8 +818,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Use the gps_data file to create the necessary .json file:\n",
-    "!ffm manage fill-dicts {WISP_tutorial}/{event_OT}/{ffm_run}/NP1.3 -t gps"
+    "# Use the gnss_data file to create the necessary .json file:\n",
+    "!ffm manage fill-dicts {WISP_tutorial}/{event_OT}/{ffm_run}/NP1.3 -t gnss"
    ]
   },
   {
@@ -830,18 +830,16 @@
    "outputs": [],
    "source": [
     "# Use 'ffm manage update-inputs' to make the update to the json official:\n",
-    "!ffm manage update-inputs {WISP_tutorial}/{event_OT}/{ffm_run}/NP1.3 -t gps"
+    "!ffm manage update-inputs {WISP_tutorial}/{event_OT}/{ffm_run}/NP1.3 -t gnss"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6d57e7bd",
+   "cell_type": "markdown",
+   "id": "1727652d-3771-4028-b3e5-301d1bf3afd3",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Now we have to make Green's functions for the static station locations:\n",
-    "!ffm process greens {WISP_tutorial}/{event_OT}/{ffm_run}/NP1.3 -t gps"
+    "Now we have to make Green's functions for the static station locations. The `model run` command will do that step, or you can do it manually with the command:\n",
+    "`ffm process greens {WISP_tutorial}/{event_OT}/{ffm_run}/NP1.3 -t gnss`"
    ]
   },
   {
@@ -855,18 +853,22 @@
    "source": [
     "# Alright, run a new inversion (and make plots) with all the available data so far!\n",
     "# Keep in mind that every time you add new data, the inversion will take a bit longer...\n",
-    "!ffm model run {WISP_tutorial}/{event_OT}/{ffm_run}/NP1.3 manual_model -t body -t surf -t strong -t cgps -t gps"
+    "!ffm model run {WISP_tutorial}/{event_OT}/{ffm_run}/NP1.3 manual_model -t body -t surf -t strong -t cgnss -t gnss"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "38798812",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "# OPTIONAL: to add station ID to all the local stations, replot with the -l flag:\n",
-    "!ffm plot neic {WISP_tutorial}/{event_OT}/{ffm_run}/NP1.3 -ffms -t body -t surf -t strong -t cgps -t gps -l"
+    "!ffm plot neic {WISP_tutorial}/{event_OT}/{ffm_run}/NP1.3 -ffms -t body -t surf -t strong -t cgnss -t gnss -l"
    ]
   },
   {
@@ -874,7 +876,7 @@
    "id": "bc1abd6d",
    "metadata": {},
    "source": [
-    "## Looking good! <a id='insar'></a> 4.4. Time for InSAR data:\n",
+    "## Looking good! <a id='imagery'></a> 4.4. Time for imagery data (InSAR):\n",
     "### Prior to inclusion in WISP, InSAR observations must be processed to line-of-sight displacements, and down-sampled to some tractable number of observations (~1000 points per scene). Use the format in the example data files. Denote any header lines with '#'"
    ]
   },
@@ -908,16 +910,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Make the necessary InSAR json files:\n",
-    "# For organization (it doesn't matter for the inversion), mark the ascending file as -ina\n",
-    "# Mark the descending file as -ind\n",
-    "# WISP can allow for linear, bilinear, and quadratic \"ramps\" for each scene\n",
+    "# Make the necessary imagery json files:\n",
+    "# WISP can allow for static, linear, bilinear, and quadratic \"ramps\" for each scene\n",
     "# Ramps are are specified by \":<ramp type>\" to the file path.\n",
-    "# Here, we'll use the simplest version, linear ramps, for both.\n",
+    "# Here, we'll use linear ramps for both.\n",
     "!ffm manage fill-dicts {WISP_tutorial}/{event_OT}/{ffm_run}/NP1.4 \\\n",
-    "    -t insar \\\n",
-    "    -ina {WISP_tutorial}/{event_OT}/{ffm_run}/NP1.4/s1_20150826-20150919_p18_ascending.txt:linear \\\n",
-    "    -ind {WISP_tutorial}/{event_OT}/{ffm_run}/NP1.4/s1_20150824-20150917_p156_descending.txt:linear;"
+    "    -t imagery \\\n",
+    "    -im {WISP_tutorial}/{event_OT}/{ffm_run}/NP1.4/s1_20150826-20150919_p18_ascending.txt:linear \\\n",
+    "    -im {WISP_tutorial}/{event_OT}/{ffm_run}/NP1.4/s1_20150824-20150917_p156_descending.txt:linear;"
    ]
   },
   {
@@ -928,19 +928,16 @@
    "outputs": [],
    "source": [
     "# Use 'ffm manage update-inputs' to make the update to the json official:\n",
-    "!ffm manage update-inputs {WISP_tutorial}/{event_OT}/{ffm_run}/NP1.4 -t insar"
+    "!ffm manage update-inputs {WISP_tutorial}/{event_OT}/{ffm_run}/NP1.4 -t imagery"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "59c6387f",
+   "cell_type": "markdown",
+   "id": "4eb23570-3f6e-45f0-926f-8bc3649179ca",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Calcluate Green's functions.\n",
-    "# With a lot of data points, this could take a few minutes\n",
-    "!ffm process greens {WISP_tutorial}/{event_OT}/{ffm_run}/NP1.4 -t insar"
+    "With new data, we must calcluate Green's functions. With a lot of data points, this may take a few minutes. The `model run` command below will first calculate the Green's functions. To do it separately, use the command:\n",
+    "`ffm process greens {WISP_tutorial}/{event_OT}/{ffm_run}/NP1.4 -t imagery`"
    ]
   },
   {
@@ -951,7 +948,7 @@
    "outputs": [],
    "source": [
     "# Re-run the inversion with all the data!\n",
-    "!ffm model run {WISP_tutorial}/{event_OT}/{ffm_run}/NP1.4 manual_model -t body -t surf -t strong -t cgps -t gps -t insar"
+    "!ffm model run {WISP_tutorial}/{event_OT}/{ffm_run}/NP1.4 manual_model -t body -t surf -t strong -t cgnss -t gnss -t imagery"
    ]
   },
   {
@@ -1028,7 +1025,7 @@
    "outputs": [],
    "source": [
     "# This command will now update the Green's funcitons for the new configuation, run the inversion, and plot the results:\n",
-    "!ffm model run {WISP_tutorial}/{event_OT}/{ffm_run}/NP1.5 manual_model -t body -t surf -t strong -t cgps -t gps -t insar\n"
+    "!ffm model run {WISP_tutorial}/{event_OT}/{ffm_run}/NP1.5 manual_model -t body -t surf -t strong -t cgnss -t gnss -t imagery\n"
    ]
   },
   {
